--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,11 @@
           <h1>Abdelaziz Dabbabi</h1>
         </a>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
+
+        <section id="downloads">
+	        <a href="/CV/cv-abdelaziz-dabbabi-FR.pdf" target="_blank">CV Français</a>
+	        <a href="/CV/cv-abdelaziz-dabbabi-FR.pdf" target="_blank">English Resume</a>
+        </section>
       </div>
     </header>
 
