--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
         <section id="downloads">
-	        <a href="/CV/cv-abdelaziz-dabbabi-FR.pdf" target="_blank">CV Français</a>
-	        <a href="/CV/cv-abdelaziz-dabbabi-FR.pdf" target="_blank">English Resume</a>
+	        <a href="{{ '/' | relative_url }}/CV/cv-abdelaziz-dabbabi-FR.pdf" target="_blank">CV Français</a> <span style='color: #b5e853;'>|</span>
+	        <a href="{{ '/' | relative_url }}/CV/cv-abdelaziz-dabbabi-FR.pdf" target="_blank">English Resume</a>
         </section>
       </div>
     </header>
