--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,8 @@
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
         <section id="downloads">
-	        <a href="{{ '/' | relative_url }}/CV/cv-abdelaziz-dabbabi-FR.pdf" target="_blank">CV Français <img loading='lazy' src='/CV/pdf-icon.png'/></a> <span style='color: #b5e853;'>|</span>
-	        <a href="{{ '/' | relative_url }}/CV/cv-abdelaziz-dabbabi-FR.pdf" target="_blank">English Resume <img loading='lazy' src='/CV/pdf-icon.png'/></a>
+	        <a href="{{ '/' | relative_url }}/CV/cv-abdelaziz-dabbabi-FR.pdf" target="_blank">CV Français <img loading='lazy' src='https://github.com/azizfcb/azizfcb/raw/gh-pages/CV/pdf-icon.png' /></a> <span style='color: #b5e853;'>|</span>
+	        <a href="{{ '/' | relative_url }}/CV/cv-abdelaziz-dabbabi-FR.pdf" target="_blank">English Resume <img loading='lazy' src='https://github.com/azizfcb/azizfcb/raw/gh-pages/CV/pdf-icon.png' /></a>
         </section>
       </div>
     </header>
