--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
 
         <section id="downloads">
-		<img height="25px" style='position: fixed;'loading='lazy' src='https://github.com/azizfcb/azizfcb/raw/gh-pages/CV/pdf-icon.png' />
+		<img height="25px" style='position: absolute;'loading='lazy' src='https://github.com/azizfcb/azizfcb/raw/gh-pages/CV/pdf-icon.png' />
 	        <a style='margin-left: 32px;' href="{{ '/' | relative_url }}/CV/cv-abdelaziz-dabbabi-FR.pdf" target="_blank">CV Français</a> <span style='color: #b5e853;'>|</span>
 	        <a href="{{ '/' | relative_url }}/CV/cv-abdelaziz-dabbabi-FR.pdf" target="_blank">English Resume</a>
         </section>
